--- a/static/login.css
+++ b/static/login.css
@@ -1,19 +1,54 @@
 body{
-    background-color:#f9d484;
+    background-size: cover;
+    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20200714/pngtree-modern-double-color-futuristic-neon-background-image_351866.jpg);
 }
 .page{
-    font-style: oblique;
-    color: #7b4d11;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
+    display:flex;
+    justify-content:center;
+    align-items:center;
     flex-direction: column;
-    margin: 20px 0;
-    margin-bottom: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif  ;
+    position: relative;
+    left: 290px;
+    height: 380px;
+    padding: 0px;
+    margin: 160px;
+    width: 600px;
+    background-color: rgba(220, 220, 220, 0.714);
 }
-.page > input{
-    margin: 20px 0;
+
+h1.head{
+    font-size: 35px ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif  ;
+}
+
+p.para{
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif  ;
+}
+
+.text1{
+    width: 197px;
+    height: 30px;
+    font-size: 15px;
+    display:flex;
+    justify-content:left;
+}
+
+.text2{
+    width: 197px;
+    height: 30px;
+    font-size: 15px;
+    display: flex;
+    justify-content:left;
+}
+
+.btn-login{
+    background-color: rgb(255, 255, 255);
+    width: 205px ;
+    position: relative;
+    right: 10px;
     padding: 10px;
-    outline: 0;
+    margin: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif  ;
 }
