mudanças que o diniz fez

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="page2">
         <h1 class="head2">Correio</h1>
         <p></p><p></p><p></p>
-        <form method="POST" action="/index"> 
+        <form method="POST" action="/carta"> 
             <div class="page3">
                 <div class="page4">
                     <p class="dest">Destinatário: <input type="text" name="destinatario" class="box1"></p>
