--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,5 @@
 body{
-    overflow: hidden;
+    overflow: 0;
     background-size: cover ;
     background-image: url(https://static.vecteezy.com/system/resources/previews/001/542/515/non_2x/neon-light-gate-background-free-vector.jpg);
 }
